force-app/main/default/objects/ServiceContract/fields/Additional_Work_in_scope_contract__c.field-meta.xml
<CustomField>
    <fullName>Additional_Work_in_scope_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Work in scope contract</label>
    <type>Checkbox</type>
</CustomField>