force-app/main/default/objects/ServiceContract/fields/Allocation_key__c.field-meta.xml
<CustomField>
    <fullName>Allocation_key__c</fullName>
    <label>Allocation key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>