force-app/main/default/objects/ServiceContract/fields/Cancellation_Date_Contract__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_Contract__c</fullName>
    <inlineHelpText>Last date by which the customer should cancel their contract</inlineHelpText>
    <label>Cancellation Date Contract</label>
    <type>Date</type>
</CustomField>