force-app/main/default/objects/ServiceContract/fields/Check_In_At_Work_Reference__c.field-meta.xml
<CustomField>
    <fullName>Check_In_At_Work_Reference__c</fullName>
    <label>Check-In-At-Work Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>