force-app/main/default/objects/ServiceContract/fields/Check_In_At_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Check_In_At_Work_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check-In-At-Work Required</label>
    <type>Checkbox</type>
</CustomField>