force-app/main/default/objects/ServiceContract/fields/Checkin_work__c.field-meta.xml
<CustomField>
    <fullName>Checkin_work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkin@work</label>
    <type>Checkbox</type>
</CustomField>