force-app/main/default/objects/ServiceContract/fields/Contract_type__c.field-meta.xml
<CustomField>
    <fullName>Contract_type__c</fullName>
    <label>Contract / Invoice type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Billing_Types</valueSetName>
    </valueSet>
</CustomField>