force-app/main/default/objects/ServiceContract/fields/Default_LMRA__c.field-meta.xml
<CustomField>
    <fullName>Default_LMRA__c</fullName>
    <label>Default LMRA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LMRA_Type</valueSetName>
    </valueSet>
</CustomField>