force-app/main/default/objects/ServiceContract/fields/External_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Contract_Reference__c</fullName>
    <label>External Contract Reference</label>
    <type>TextArea</type>
</CustomField>