force-app/main/default/objects/ServiceContract/fields/Generate_Maintenance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Generate_Maintenance_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Maintenance Plan</label>
    <type>Checkbox</type>
</CustomField>