force-app/main/default/objects/ServiceContract/fields/Global_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Contract_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Atak Project Object</description>
    <label>Global Contract ID</label>
    <referenceTo>ATAK_Project__c</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>