force-app/main/default/objects/ServiceContract/fields/Indexation_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexation Allowed</label>
    <type>Checkbox</type>
</CustomField>