force-app/main/default/objects/ServiceContract/fields/Indexation_Date__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Date__c</fullName>
    <label>Indexation Date</label>
    <type>Date</type>
</CustomField>