force-app/main/default/objects/ServiceContract/fields/Indexation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Formula__c</fullName>
    <label>Indexation Formula</label>
    <type>TextArea</type>
</CustomField>