force-app/main/default/objects/ServiceContract/fields/Indexation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexation Needed</label>
    <type>Checkbox</type>
</CustomField>