force-app/main/default/objects/ServiceContract/fields/Invoice_Type_MS__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type_MS__c</fullName>
    <label>Invoice Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Type</valueSetName>
    </valueSet>
</CustomField>