force-app/main/default/objects/ServiceContract/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <formula>NOT(ISNULL(Id))</formula>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>