force-app/main/default/objects/ServiceContract/fields/Link_contract__c.field-meta.xml
<CustomField>
    <fullName>Link_contract__c</fullName>
    <label>Link contract</label>
    <type>Url</type>
</CustomField>