force-app/main/default/objects/ServiceContract/fields/Location_Visit__c.field-meta.xml
<CustomField>
    <fullName>Location_Visit__c</fullName>
    <label>Location Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>