force-app/main/default/objects/ServiceContract/fields/Payment_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Payment_Conditions__c</fullName>
    <label>Payment Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>