force-app/main/default/objects/ServiceContract/fields/Renewal_Reminder_Needed__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder_Needed__c</fullName>
    <description>used in a flow to indicate if a renewal remnder needs to be sent (if End date = Today - 90 days)</description>
    <formula>TODAY() = EndDate - 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Reminder Needed</label>
    <type>Checkbox</type>
</CustomField>