force-app/main/default/objects/ServiceContract/fields/Request_date_for_indexation__c.field-meta.xml
<CustomField>
    <fullName>Request_date_for_indexation__c</fullName>
    <label>Request date for indexation</label>
    <type>Date</type>
</CustomField>