force-app/main/default/objects/ServiceContract/fields/Service_Appointments_Color_on_Gantt__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointments_Color_on_Gantt__c</fullName>
    <inlineHelpText>You can already color-code appointments in the dispatcher console by setting a hexadecimal color here (eg #449f03)</inlineHelpText>
    <label>Service Appointments Color on Gantt</label>
    <length>12</length>
    <type>Text</type>
</CustomField>