force-app/main/default/objects/ServiceContract/fields/Service_Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Package_Type__c</fullName>
    <label>Service Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>