force-app/main/default/objects/ServiceContract/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>