force-app/main/default/objects/ServiceContract/fields/SPOC_Client__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPOC Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts_del1</relationshipName>
    <type>Lookup</type>
</CustomField>