force-app/main/default/objects/ServiceContract/fields/SPOC_KGC__c.field-meta.xml
<CustomField>
    <fullName>SPOC_KGC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPOC KGC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>