force-app/main/default/objects/ServiceContract/fields/Status_custom__c.field-meta.xml
<CustomField>
    <fullName>Status_custom__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Started</fullName>
            </value>
            <value>
                <fullName>Operationally Active</fullName>
            </value>
            <value>
                <fullName>Operationally Active/Expired</fullName>
            </value>
            <value>
                <fullName>Contract Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>