force-app/main/default/objects/ServiceContract/fields/Tender_Code__c.field-meta.xml
<CustomField>
    <fullName>Tender_Code__c</fullName>
    <label>Tender Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>