force-app/main/default/objects/ServiceContract/validationRules/Commercial_Contract_Commercial_Acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Commercial_Contract_Commercial_Acc</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Type__c) = &apos;Commercial Agreement&apos; &amp;&amp;  Account.RecordType.Name != &apos;Commercial Account&apos;</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Commercial Contracts can only be linked to Commercial Accounts</errorMessage>
</ValidationRule>