force-app/main/default/objects/ServiceContract/validationRules/Service_Contract_Commercial_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Contract_Commercial_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Type__c) = &apos;Service Contract&apos; &amp;&amp;  ParentServiceContractId = &apos;&apos;</errorConditionFormula>
    <errorMessage>A Service Contract always needs a Commercial Agreement</errorMessage>
</ValidationRule>